# top_project2

./: .gitignore  CMakeLists.txt  config_1000.txt  config_500.txt
include/stencil/: comm_handler.h  mesh.h
plot/: plot.gp
reference/: ref_100.txt  ref_1000.txt  ref_500.txt
results/: res_1000_-O3_24.txt  res_1000_-O3_48.txt  res_1000_-Ofast_1.txt  res_1000_-Ofast_24.txt  res_1000_-Ofast_4.txt  res_1000_24.txt  res_1000__Ofast_16.txt  res_1000__Ofast_2.txt  res_1000__Ofast_24.txt  res_1000__Ofast_8.txt  res_1000_ijk_24.txt  res_1000_o_1.txt  res_1000_o_16.txt  res_1000_o_2.txt  res_1000_o_24.txt  res_1000_o_4.txt  res_1000_o_48.txt  res_1000_o_8.txt  res_100_-O3_24.txt  res_100_-Ofast_1.txt  res_100_-Ofast_2.txt  res_100_-Ofast_24.txt  res_100_-Ofast_4.txt  res_100_-Ofast_8.txt  res_100_48.txt  res_100__Ofast_16.txt  res_100__Ofast_24.txt  res_100_ijk_24.txt  res_100_o_1.txt  res_100_o_16.txt  res_100_o_2.txt  res_100_o_24.txt  res_100_o_4.txt  res_100_o_48.txt  res_100_o_8.txt  res_500_-O3_24.txt  res_500_-Ofast_24.txt  res_500_-Ofast_48.txt  res_500_24.txt  res_500__Ofast_1.txt  (+18 more)
scripts/: block.sh  clean.sh  compare.sh  run_p.sh
speed_up/: perf_1000_-O3_24.txt  perf_1000_-Ofast_24.txt  perf_1000_24.txt  perf_1000__Ofast_1.txt  perf_1000__Ofast_16.txt  perf_1000__Ofast_2.txt  perf_1000__Ofast_24.txt  perf_1000__Ofast_4.txt  perf_1000__Ofast_8.txt  perf_1000_ijk_24.txt  perf_1000_o_1.txt  perf_1000_o_16.txt  perf_1000_o_2.txt  perf_1000_o_24.txt  perf_1000_o_4.txt  perf_1000_o_48.txt  perf_1000_o_8.txt  perf_100_-O3_24.txt  perf_100_-Ofast_24.txt  perf_100_24.txt  perf_100__Ofast_1.txt  perf_100__Ofast_16.txt  perf_100__Ofast_2.txt  perf_100__Ofast_24.txt  perf_100__Ofast_4.txt  perf_100__Ofast_8.txt  perf_100_ijk_24.txt  perf_100_o_1.txt  perf_100_o_16.txt  perf_100_o_2.txt  perf_100_o_24.txt  perf_100_o_4.txt  perf_100_o_48.txt  perf_100_o_8.txt  perf_100_o_f_24.txt  perf_500_-O3_24.txt  perf_500_-Ofast_24.txt  perf_500_24.txt  perf_500__Ofast_1.txt  perf_500__Ofast_16.txt  (+94 more)
src/: CMakeLists.txt  main.c
src/stencil/: comm_handler.c  init.c  mesh.c  solve.c
